# huawei-ascend-variant-provider

./: pyproject.toml
huawei_ascend_variant_provider/: __init__.py  ascend_environment.py  ascend_probe.py  detect_ascend_environment.py  detect_cann.py  detect_cann_version.py  detect_driver_version.py  detect_npu_driver.py  detect_npu_type.py  feature_control.py  plugin.py  pysmi.py
