[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "huawei-ascend-variant-provider"
authors = [
    { name = "Zhicong Yan", email = "mryanzhicong@163.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
urls = { Home = "https://github.com/wheelnext/huawei-ascend-variant-provider/" }
dependencies = []
dynamic = ["version", "description"]

# Register as a variant plugin for the `wheel` tool.
[project.entry-points.variant_plugins]
huawei_ascend_variant_provider = "huawei_ascend_variant_provider.plugin:AscendVariantPlugin"

# CLI for debugging.
[project.scripts]
huawei_ascend_variant_print = "huawei_ascend_variant_provider.plugin:main"
